[优化] 调整模块代码结构